ctfd-k8s/ctfd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ctfd
  namespace: ctfd
  annotations:
    kubernetes.io/ingress.class: "nginx"
